# design-patterns-for-data-scientist

./: README.md  pyproject.toml
examples/behavioural_patterns/: iterator.py  observer.py  strategy.py
examples/creational_patterns/: builder.py  factory.py  singleton.py
examples/structural_patterns/: adapter.py  facade.py
